--- a/VelocityDbTrial/SoundExplorersDatabase.csproj
+++ b/VelocityDbTrial/SoundExplorersDatabase.csproj
@@ -77,10 +77,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Data\DatabaseSchema.cs" />
-    <Compile Include="Program.cs" />
+    <Compile Include="Data\Event.cs" />
+    <Compile Include="Data\Newsletter.cs" />
+    <Compile Include="Data\Series.cs" />
+    <Compile Include="Data\Location.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Data\SchemaVersion.cs" />
     <Compile Include="Tests\Data\DatabaseSchemaTest.cs" />
+    <Compile Include="Tests\Data\TestSession.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
