--- a/VelocityDbTrial/SoundExplorersDatabase.csproj
+++ b/VelocityDbTrial/SoundExplorersDatabase.csproj
@@ -76,7 +76,6 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Data\DatabaseSchema.cs" />
     <Compile Include="Data\Event.cs" />
     <Compile Include="Data\Newsletter.cs" />
     <Compile Include="Data\Series.cs" />
@@ -84,7 +83,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Data\SchemaVersion.cs" />
-    <Compile Include="Tests\Data\DatabaseSchemaTest.cs" />
+    <Compile Include="Tests\Data\SchemaVersionTests.cs" />
     <Compile Include="Tests\Data\TestSession.cs" />
   </ItemGroup>
   <ItemGroup>
