--- a/VelocityDbTrial/SoundExplorersDatabase.Tests/packages.config
+++ b/VelocityDbTrial/SoundExplorersDatabase.Tests/packages.config
@@ -6,6 +6,8 @@
   <package id="Microsoft.Data.Services.Client" version="5.8.4" targetFramework="net472" />
   <package id="Microsoft.SyncFramework" version="2.1.0.2" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net472" />
+  <package id="NUnit" version="3.12.0" targetFramework="net472" />
+  <package id="NUnit3TestAdapter" version="3.17.0" targetFramework="net472" />
   <package id="System.Spatial" version="5.8.4" targetFramework="net472" />
   <package id="VelocityDB" version="9.1.0" targetFramework="net472" />
   <package id="VelocityDBExtensions" version="9.1.0" targetFramework="net472" />
