--- a/SoundExplorersDatabase/Tests/SoundExplorersDatabase.Tests.csproj
+++ b/SoundExplorersDatabase/Tests/SoundExplorersDatabase.Tests.csproj
@@ -34,6 +34,10 @@
         <WarningLevel>4</WarningLevel>
     </PropertyGroup>
     <ItemGroup>
+        <Reference Include="JetBrains.Annotations, Version=2020.1.0.0, Culture=neutral, PublicKeyToken=1010a0d8d6380325">
+          <HintPath>..\packages\JetBrains.Annotations.2020.1.0\lib\net20\JetBrains.Annotations.dll</HintPath>
+          <Private>True</Private>
+        </Reference>
         <Reference Include="LumenWorks.Framework.IO, Version=4.0.0.0, Culture=neutral, PublicKeyToken=5ad3ea2f85776344">
           <HintPath>..\packages\LumenWorksCsvReader.4.0.0\lib\net461\LumenWorks.Framework.IO.dll</HintPath>
           <Private>True</Private>
@@ -88,10 +92,6 @@
     </ItemGroup>
     <ItemGroup>
       <ProjectReference Include="..\SoundExplorersDatabase.csproj">
-        <Project>{eb9dd1ae-4445-45c2-bd75-b27cf5a87642}</Project>
-        <Name>SoundExplorersDatabase</Name>
-      </ProjectReference>
-      <ProjectReference Include="..\SoundExplorersDatabase\SoundExplorersDatabase.csproj">
         <Project>{eb9dd1ae-4445-45c2-bd75-b27cf5a87642}</Project>
         <Name>SoundExplorersDatabase</Name>
       </ProjectReference>
