--- a/SoundExplorersDatabase/Tests/SoundExplorersDatabase.Tests.csproj
+++ b/SoundExplorersDatabase/Tests/SoundExplorersDatabase.Tests.csproj
@@ -85,6 +85,7 @@
     <ItemGroup>
         <Compile Include="Data\EventTests.cs" />
         <Compile Include="Data\LocationTests.cs" />
+        <Compile Include="Data\ReferencingTests.cs" />
         <Compile Include="Data\SchemaVersionTests.cs" />
         <Compile Include="Data\TestSession.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
