--- a/SoundExplorersDatabase/Tests/SoundExplorersDatabase.Tests.csproj
+++ b/SoundExplorersDatabase/Tests/SoundExplorersDatabase.Tests.csproj
@@ -83,8 +83,10 @@
         </Reference>
     </ItemGroup>
     <ItemGroup>
+        <Compile Include="Data\Child.cs" />
         <Compile Include="Data\EventTests.cs" />
         <Compile Include="Data\LocationTests.cs" />
+        <Compile Include="Data\Parent.cs" />
         <Compile Include="Data\ReferencingTests.cs" />
         <Compile Include="Data\SchemaVersionTests.cs" />
         <Compile Include="Data\TestSession.cs" />
