--- a/SoundExplorersDatabase/SoundExplorersDatabase.csproj
+++ b/SoundExplorersDatabase/SoundExplorersDatabase.csproj
@@ -76,6 +76,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Data\ISortedChildList.cs" />
     <Compile Include="Data\SortedChildList.cs" />
     <Compile Include="Data\ChildrenType.cs" />
     <Compile Include="Data\RelativeBase.cs" />
