--- a/SoundExplorersDatabase/Tests/SoundExplorersDatabase.Tests.csproj
+++ b/SoundExplorersDatabase/Tests/SoundExplorersDatabase.Tests.csproj
@@ -89,8 +89,10 @@
         <Compile Include="Data\Father.cs" />
         <Compile Include="Data\LocationTests.cs" />
         <Compile Include="Data\Mother.cs" />
+        <Compile Include="Data\NewsletterTests.cs" />
         <Compile Include="Data\ReferencingTests.cs" />
         <Compile Include="Data\SchemaVersionTests.cs" />
+        <Compile Include="Data\SeriesTests.cs" />
         <Compile Include="Data\Son.cs" />
         <Compile Include="Data\TestSchema.cs" />
         <Compile Include="Data\TestSession.cs" />
