Tests for changing parent now ensure compound keys are used when checking for duplicates, which does not yet happen.

--- a/SoundExplorersDatabase/SoundExplorersDatabase.csproj
+++ b/SoundExplorersDatabase/SoundExplorersDatabase.csproj
@@ -81,6 +81,7 @@
     <Compile Include="Data\QueryHelper.cs" />
     <Compile Include="Data\RelationInfo.cs" />
     <Compile Include="Data\Schema.cs" />
+    <Compile Include="Data\Set.cs" />
     <Compile Include="Data\SortedChildList.cs" />
     <Compile Include="Data\RelativeBase.cs" />
     <Compile Include="Data\Event.cs" />
