--- a/SoundExplorersDatabase/Tests/SoundExplorersDatabase.Tests.csproj
+++ b/SoundExplorersDatabase/Tests/SoundExplorersDatabase.Tests.csproj
@@ -88,7 +88,9 @@
         <Compile Include="Data\Daughter.cs" />
         <Compile Include="Data\EventTests.cs" />
         <Compile Include="Data\Father.cs" />
+        <Compile Include="Data\KeyTests.cs" />
         <Compile Include="Data\LocationTests.cs" />
+        <Compile Include="Data\MockKeyedRelativeBase.cs" />
         <Compile Include="Data\Mother.cs" />
         <Compile Include="Data\NewsletterTests.cs" />
         <Compile Include="Data\ReferencingTests.cs" />
