--- a/SoundExplorersDatabase/SoundExplorersDatabase.csproj
+++ b/SoundExplorersDatabase/SoundExplorersDatabase.csproj
@@ -77,7 +77,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Data\Act.cs" />
-    <Compile Include="Data\IKeyedRelative.cs" />
+    <Compile Include="Data\IRelative.cs" />
     <Compile Include="Data\Key.cs" />
     <Compile Include="Data\IRelationInfo.cs" />
     <Compile Include="Data\KeyComparer.cs" />
@@ -86,7 +86,7 @@
     <Compile Include="Data\Schema.cs" />
     <Compile Include="Data\Set.cs" />
     <Compile Include="Data\SortedChildList.cs" />
-    <Compile Include="Data\KeyedRelative.cs" />
+    <Compile Include="Data\RelativeBase.cs" />
     <Compile Include="Data\Event.cs" />
     <Compile Include="Data\Newsletter.cs" />
     <Compile Include="Data\Series.cs" />
