--- a/SoundExplorersDatabase/Tests/SoundExplorersDatabase.Tests.csproj
+++ b/SoundExplorersDatabase/Tests/SoundExplorersDatabase.Tests.csproj
@@ -90,11 +90,11 @@
         <Compile Include="Data\Father.cs" />
         <Compile Include="Data\KeyTests.cs" />
         <Compile Include="Data\LocationTests.cs" />
-        <Compile Include="Data\MockRelativeBase.cs" />
         <Compile Include="Data\Mother.cs" />
         <Compile Include="Data\NewsletterTests.cs" />
         <Compile Include="Data\QueryHelperTests.cs" />
         <Compile Include="Data\ReferencingTests.cs" />
+        <Compile Include="Data\RelativeBaseTests.cs" />
         <Compile Include="Data\SchemaVersionTests.cs" />
         <Compile Include="Data\SeriesTests.cs" />
         <Compile Include="Data\SetTests.cs" />
