--- a/SoundExplorersDatabase/Tests/SoundExplorersDatabase.Tests.csproj
+++ b/SoundExplorersDatabase/Tests/SoundExplorersDatabase.Tests.csproj
@@ -92,6 +92,7 @@
         <Compile Include="Data\LocationTests.cs" />
         <Compile Include="Data\Mother.cs" />
         <Compile Include="Data\NewsletterTests.cs" />
+        <Compile Include="Data\PieceTests.cs" />
         <Compile Include="Data\QueryHelperTests.cs" />
         <Compile Include="Data\ReferencingTests.cs" />
         <Compile Include="Data\RelativeBaseTests.cs" />
