--- a/SoundExplorersDatabase/Tests/SoundExplorersDatabase.Tests.csproj
+++ b/SoundExplorersDatabase/Tests/SoundExplorersDatabase.Tests.csproj
@@ -84,6 +84,7 @@
     </ItemGroup>
     <ItemGroup>
         <Compile Include="Data\ActTests.cs" />
+        <Compile Include="Data\ArtistTests.cs" />
         <Compile Include="Data\DataTestsTemplate.cs" />
         <Compile Include="Data\Daughter.cs" />
         <Compile Include="Data\EventTests.cs" />
