--- a/SoundExplorersDatabase/SoundExplorersDatabase.csproj
+++ b/SoundExplorersDatabase/SoundExplorersDatabase.csproj
@@ -78,7 +78,7 @@
   <ItemGroup>
     <Compile Include="Data\Act.cs" />
     <Compile Include="Data\Artist.cs" />
-    <Compile Include="Data\IRelative.cs" />
+    <Compile Include="Data\IEntity.cs" />
     <Compile Include="Data\Key.cs" />
     <Compile Include="Data\IRelationInfo.cs" />
     <Compile Include="Data\KeyComparer.cs" />
@@ -88,7 +88,7 @@
     <Compile Include="Data\Schema.cs" />
     <Compile Include="Data\Set.cs" />
     <Compile Include="Data\SortedChildList.cs" />
-    <Compile Include="Data\RelativeBase.cs" />
+    <Compile Include="Data\EntityBase.cs" />
     <Compile Include="Data\Event.cs" />
     <Compile Include="Data\Newsletter.cs" />
     <Compile Include="Data\Series.cs" />
