--- a/SoundExplorersDatabase/Tests/SoundExplorersDatabase.Tests.csproj
+++ b/SoundExplorersDatabase/Tests/SoundExplorersDatabase.Tests.csproj
@@ -97,6 +97,7 @@
         <Compile Include="Data\QueryHelperTests.cs" />
         <Compile Include="Data\ReferencingTests.cs" />
         <Compile Include="Data\EntityBaseTests.cs" />
+        <Compile Include="Data\RoleTests.cs" />
         <Compile Include="Data\SchemaVersionTests.cs" />
         <Compile Include="Data\SeriesTests.cs" />
         <Compile Include="Data\SetTests.cs" />
