--- a/SoundExplorersDatabase/SoundExplorersDatabase.csproj
+++ b/SoundExplorersDatabase/SoundExplorersDatabase.csproj
@@ -85,6 +85,7 @@
     <Compile Include="Data\Piece.cs" />
     <Compile Include="Data\QueryHelper.cs" />
     <Compile Include="Data\RelationInfo.cs" />
+    <Compile Include="Data\Role.cs" />
     <Compile Include="Data\Schema.cs" />
     <Compile Include="Data\Set.cs" />
     <Compile Include="Data\SortedChildList.cs" />
