Credit placeholder. Newsletter.Path case-insensitive duplicate check. EventTest allow for null Event.

--- a/SoundExplorersDatabase/SoundExplorersDatabase.csproj
+++ b/SoundExplorersDatabase/SoundExplorersDatabase.csproj
@@ -78,6 +78,7 @@
   <ItemGroup>
     <Compile Include="Data\Act.cs" />
     <Compile Include="Data\Artist.cs" />
+    <Compile Include="Data\Credit.cs" />
     <Compile Include="Data\IEntity.cs" />
     <Compile Include="Data\Key.cs" />
     <Compile Include="Data\IRelationInfo.cs" />
