--- a/SoundExplorersDatabase/Tests/SoundExplorersDatabase.Tests.csproj
+++ b/SoundExplorersDatabase/Tests/SoundExplorersDatabase.Tests.csproj
@@ -85,6 +85,7 @@
     <ItemGroup>
         <Compile Include="Data\ActTests.cs" />
         <Compile Include="Data\ArtistTests.cs" />
+        <Compile Include="Data\CreditTests.cs" />
         <Compile Include="Data\DataTestsTemplate.cs" />
         <Compile Include="Data\Daughter.cs" />
         <Compile Include="Data\EventTests.cs" />
