--- a/SoundExplorersDatabase/Tests/SoundExplorersDatabase.Tests.csproj
+++ b/SoundExplorersDatabase/Tests/SoundExplorersDatabase.Tests.csproj
@@ -88,6 +88,7 @@
         <Compile Include="Data\CreditTests.cs" />
         <Compile Include="Data\DataTestsTemplate.cs" />
         <Compile Include="Data\Daughter.cs" />
+        <Compile Include="Data\EntityBaseTests.cs" />
         <Compile Include="Data\EventTests.cs" />
         <Compile Include="Data\Father.cs" />
         <Compile Include="Data\KeyTests.cs" />
@@ -97,9 +98,8 @@
         <Compile Include="Data\PieceTests.cs" />
         <Compile Include="Data\QueryHelperTests.cs" />
         <Compile Include="Data\ReferencingTests.cs" />
-        <Compile Include="Data\EntityBaseTests.cs" />
         <Compile Include="Data\RoleTests.cs" />
-        <Compile Include="Data\SchemaVersionTests.cs" />
+        <Compile Include="Data\SchemaTests.cs" />
         <Compile Include="Data\SeriesTests.cs" />
         <Compile Include="Data\SetTests.cs" />
         <Compile Include="Data\Son.cs" />
