.gitignore. Remove obsolete entity relationship diagram reference.

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@ riderModule.iml
 SoundExplorersDatabase/.idea/
 SoundExplorersDatabase/packages/
 SoundExplorersDatabase/_ReSharper.Caches/
+
+Archivists' App/obj/
