All top-level tables and Performance columns displayed in the correct order

--- a/Archivists' App/SoundExplorers.csproj
+++ b/Archivists' App/SoundExplorers.csproj
@@ -80,6 +80,7 @@
     <Compile Include="Data\AudioFile.cs" />
     <Compile Include="Data\AudioFileTags.cs" />
     <Compile Include="Data\AudioTags.cs" />
+    <Compile Include="Data\EntityColumnComparer.cs" />
     <Compile Include="Data\HiddenFieldAttribute.cs" />
     <Compile Include="Data\PieceOwningMediaEntity.cs" />
     <Compile Include="Data\IMediaEntity.cs" />
