Main window converted to MVC

--- a/Archivists' App/SoundExplorers.Controller/SoundExplorers.Controller.csproj
+++ b/Archivists' App/SoundExplorers.Controller/SoundExplorers.Controller.csproj
@@ -32,13 +32,19 @@
         <WarningLevel>4</WarningLevel>
     </PropertyGroup>
     <ItemGroup>
+        <Reference Include="JetBrains.Annotations, Version=2020.1.0.0, Culture=neutral, PublicKeyToken=1010a0d8d6380325">
+          <HintPath>..\packages\JetBrains.Annotations.2020.1.0\lib\net20\JetBrains.Annotations.dll</HintPath>
+          <Private>True</Private>
+        </Reference>
         <Reference Include="System" />
         <Reference Include="System.Core" />
         <Reference Include="System.Data" />
         <Reference Include="System.Xml" />
     </ItemGroup>
     <ItemGroup>
+        <Compile Include="IMainView.cs" />
         <Compile Include="IMessageUpdater.cs" />
+        <Compile Include="MainController.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
     </ItemGroup>
     <ItemGroup>
@@ -46,6 +52,9 @@
         <Project>{18afe356-86b5-48cf-8f8d-4c6c0bd72f2f}</Project>
         <Name>SoundExplorers.Data</Name>
       </ProjectReference>
+    </ItemGroup>
+    <ItemGroup>
+      <None Include="packages.config" />
     </ItemGroup>
     <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
     <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
