FormFactory and ViewFactory

--- a/Archivists' App/SoundExplorers.csproj
+++ b/Archivists' App/SoundExplorers.csproj
@@ -80,6 +80,7 @@
     <Compile Include="FittedPictureBox.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="FormFactory.cs" />
     <Compile Include="PathCell.cs" />
     <Compile Include="MainView.cs">
       <SubType>Form</SubType>
