--- a/Archivists' App/SoundExplorers.Controller/SoundExplorers.Controller.csproj
+++ b/Archivists' App/SoundExplorers.Controller/SoundExplorers.Controller.csproj
@@ -42,12 +42,12 @@
         <Reference Include="System.Xml" />
     </ItemGroup>
     <ItemGroup>
-        <Compile Include="IMainView.cs" />
         <Compile Include="IMessageUpdater.cs" />
-        <Compile Include="ITableView.cs" />
+        <Compile Include="IView.cs" />
         <Compile Include="MainController.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
         <Compile Include="TableController.cs" />
+        <Compile Include="ViewFactory.cs" />
     </ItemGroup>
     <ItemGroup>
       <ProjectReference Include="..\SoundExplorers.Data\SoundExplorers.Data.csproj">
