--- a/Archivists' App/SoundExplorers.Common/SoundExplorers.Common.csproj
+++ b/Archivists' App/SoundExplorers.Common/SoundExplorers.Common.csproj
@@ -4,11 +4,11 @@
     <PropertyGroup>
         <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
         <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-        <ProjectGuid>{1DF40F87-9462-4211-9F51-A15AF63CB6AE}</ProjectGuid>
+        <ProjectGuid>{24F52A9C-6679-4029-ABFD-7EAA964CC945}</ProjectGuid>
         <OutputType>Library</OutputType>
         <AppDesignerFolder>Properties</AppDesignerFolder>
-        <RootNamespace>SoundExplorers.Controller</RootNamespace>
-        <AssemblyName>SoundExplorers.Controller</AssemblyName>
+        <RootNamespace>SoundExplorers.Common</RootNamespace>
+        <AssemblyName>SoundExplorers.Common</AssemblyName>
         <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
         <FileAlignment>512</FileAlignment>
     </PropertyGroup>
@@ -32,36 +32,14 @@
         <WarningLevel>4</WarningLevel>
     </PropertyGroup>
     <ItemGroup>
-        <Reference Include="JetBrains.Annotations, Version=2020.1.0.0, Culture=neutral, PublicKeyToken=1010a0d8d6380325">
-          <HintPath>..\packages\JetBrains.Annotations.2020.1.0\lib\net20\JetBrains.Annotations.dll</HintPath>
-          <Private>True</Private>
-        </Reference>
         <Reference Include="System" />
         <Reference Include="System.Core" />
         <Reference Include="System.Data" />
         <Reference Include="System.Xml" />
     </ItemGroup>
     <ItemGroup>
-        <Compile Include="IMessageUpdater.cs" />
-        <Compile Include="ITableView.cs" />
-        <Compile Include="IView.cs" />
-        <Compile Include="MainController.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
-        <Compile Include="TableController.cs" />
-        <Compile Include="ViewFactory.cs" />
-    </ItemGroup>
-    <ItemGroup>
-      <ProjectReference Include="..\SoundExplorers.Common\SoundExplorers.Common.csproj">
-        <Project>{24f52a9c-6679-4029-abfd-7eaa964cc945}</Project>
-        <Name>SoundExplorers.Common</Name>
-      </ProjectReference>
-      <ProjectReference Include="..\SoundExplorers.Data\SoundExplorers.Data.csproj">
-        <Project>{18afe356-86b5-48cf-8f8d-4c6c0bd72f2f}</Project>
-        <Name>SoundExplorers.Data</Name>
-      </ProjectReference>
-    </ItemGroup>
-    <ItemGroup>
-      <None Include="packages.config" />
+        <Compile Include="RowErrorEventArgs.cs" />
     </ItemGroup>
     <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
     <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
