--- a/Archivists' App/SoundExplorers.Common/SoundExplorers.Common.csproj
+++ b/Archivists' App/SoundExplorers.Common/SoundExplorers.Common.csproj
@@ -32,14 +32,27 @@
         <WarningLevel>4</WarningLevel>
     </PropertyGroup>
     <ItemGroup>
+        <Reference Include="JetBrains.Annotations, Version=2020.1.0.0, Culture=neutral, PublicKeyToken=1010a0d8d6380325">
+          <HintPath>..\packages\JetBrains.Annotations.2020.1.0\lib\net20\JetBrains.Annotations.dll</HintPath>
+          <Private>True</Private>
+        </Reference>
         <Reference Include="System" />
         <Reference Include="System.Core" />
         <Reference Include="System.Data" />
         <Reference Include="System.Xml" />
     </ItemGroup>
     <ItemGroup>
+        <Compile Include="IEntity.cs" />
+        <Compile Include="IEntityColumn.cs" />
+        <Compile Include="IEntityColumnContainer.cs" />
+        <Compile Include="IEntityColumnList.cs" />
+        <Compile Include="IEntityList.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
         <Compile Include="RowErrorEventArgs.cs" />
+        <Compile Include="RowUpdatedEventArgs.cs" />
+    </ItemGroup>
+    <ItemGroup>
+      <None Include="packages.config" />
     </ItemGroup>
     <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
     <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
