--- a/Archivists' App/SoundExplorers.csproj
+++ b/Archivists' App/SoundExplorers.csproj
@@ -106,11 +106,11 @@
     <Compile Include="SplashManager.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="TableForm.cs">
+    <Compile Include="TableView.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="TableForm.Designer.cs">
-      <DependentUpon>TableForm.cs</DependentUpon>
+    <Compile Include="TableView.Designer.cs">
+      <DependentUpon>TableView.cs</DependentUpon>
     </Compile>
     <Compile Include="PathEditingControl.cs">
       <SubType>UserControl</SubType>
@@ -137,8 +137,8 @@
     <EmbeddedResource Include="SplashForm.resx">
       <DependentUpon>SplashForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="TableForm.resx">
-      <DependentUpon>TableForm.cs</DependentUpon>
+    <EmbeddedResource Include="TableView.resx">
+      <DependentUpon>TableView.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="app.config" />
     <None Include="packages.config" />
