--- a/Archivists' App/SoundExplorers.Controller/SoundExplorers.Controller.csproj
+++ b/Archivists' App/SoundExplorers.Controller/SoundExplorers.Controller.csproj
@@ -46,6 +46,7 @@
         <Compile Include="ITableView.cs" />
         <Compile Include="IView.cs" />
         <Compile Include="MainController.cs" />
+        <Compile Include="PathCellController.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
         <Compile Include="TableController.cs" />
         <Compile Include="ViewFactory.cs" />
