--- a/Archivists' App/SoundExplorers.Controller/SoundExplorers.Controller.csproj
+++ b/Archivists' App/SoundExplorers.Controller/SoundExplorers.Controller.csproj
@@ -50,6 +50,7 @@
         <Compile Include="MainController.cs" />
         <Compile Include="PathCellController.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
+        <Compile Include="SelectTableController.cs" />
         <Compile Include="TableController.cs" />
         <Compile Include="ViewFactory.cs" />
     </ItemGroup>
