--- a/Archivists' App/SoundExplorers.csproj
+++ b/Archivists' App/SoundExplorers.csproj
@@ -89,11 +89,11 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SelectTableForm.cs">
+    <Compile Include="SelectTableView.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="SelectTableForm.Designer.cs">
-      <DependentUpon>SelectTableForm.cs</DependentUpon>
+    <Compile Include="SelectTableView.Designer.cs">
+      <DependentUpon>SelectTableView.cs</DependentUpon>
     </Compile>
     <Compile Include="SizeableFormOptions.cs" />
     <Compile Include="SplashForm.cs">
@@ -130,8 +130,8 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
-    <EmbeddedResource Include="SelectTableForm.resx">
-      <DependentUpon>SelectTableForm.cs</DependentUpon>
+    <EmbeddedResource Include="SelectTableView.resx">
+      <DependentUpon>SelectTableView.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="SplashForm.resx">
       <DependentUpon>SplashForm.cs</DependentUpon>
