--- a/Archivists' App/SoundExplorers.Controller/SoundExplorers.Controller.csproj
+++ b/Archivists' App/SoundExplorers.Controller/SoundExplorers.Controller.csproj
@@ -51,6 +51,7 @@
         <Compile Include="PathCellController.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
         <Compile Include="SelectTableController.cs" />
+        <Compile Include="SizeableFormOptionsController.cs" />
         <Compile Include="TableController.cs" />
         <Compile Include="ViewFactory.cs" />
     </ItemGroup>
