--- a/Archivists' App/SoundExplorers.Data/SoundExplorers.Data.csproj
+++ b/Archivists' App/SoundExplorers.Data/SoundExplorers.Data.csproj
@@ -103,6 +103,11 @@
         <Compile Include="FieldAttribute.cs" />
         <Compile Include="HiddenFieldAttribute.cs" />
         <Compile Include="IAudioTags.cs" />
+        <Compile Include="IEntity.cs" />
+        <Compile Include="IEntityColumn.cs" />
+        <Compile Include="IEntityColumnContainer.cs" />
+        <Compile Include="IEntityColumnList.cs" />
+        <Compile Include="IEntityList.cs" />
         <Compile Include="Image.cs" />
         <Compile Include="ImageList.cs" />
         <Compile Include="IMediaEntity.cs" />
@@ -127,6 +132,7 @@
         <Compile Include="ReferencedFieldAttribute.cs" />
         <Compile Include="Role.cs" />
         <Compile Include="RoleList.cs" />
+        <Compile Include="RowUpdatedEventArgs.cs" />
         <Compile Include="SelectCommand.cs" />
         <Compile Include="Series.cs" />
         <Compile Include="SeriesList.cs" />
