--- a/Archivists' App/SoundExplorers.Data/SoundExplorers.Data.csproj
+++ b/Archivists' App/SoundExplorers.Data/SoundExplorers.Data.csproj
@@ -33,12 +33,10 @@
     </PropertyGroup>
     <ItemGroup>
         <Reference Include="Devart.Data, Version=5.0.2488.0, Culture=neutral, PublicKeyToken=09af7300eec23701">
-          <HintPath>..\packages\Devart.Data.5.0.2488\lib\netstandard2.0\Devart.Data.dll</HintPath>
-          <Private>True</Private>
+          <HintPath>C:\Program Files (x86)\Devart\dotConnect\PostgreSQL\Devart.Data.dll</HintPath>
         </Reference>
         <Reference Include="Devart.Data.PostgreSql, Version=7.17.1696.0, Culture=neutral, PublicKeyToken=09af7300eec23701">
-          <HintPath>..\packages\Devart.Data.PostgreSql.7.17.1696\lib\netstandard2.0\Devart.Data.PostgreSql.dll</HintPath>
-          <Private>True</Private>
+          <HintPath>C:\Program Files (x86)\Devart\dotConnect\PostgreSQL\Devart.Data.PostgreSql.dll</HintPath>
         </Reference>
         <Reference Include="JetBrains.Annotations, Version=2020.1.0.0, Culture=neutral, PublicKeyToken=1010a0d8d6380325">
           <HintPath>..\packages\JetBrains.Annotations.2020.1.0\lib\net20\JetBrains.Annotations.dll</HintPath>
