--- a/SoundExplorersDatabase/SoundExplorersDatabase.csproj
+++ b/SoundExplorersDatabase/SoundExplorersDatabase.csproj
@@ -76,34 +76,32 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Data\Act.cs" />
-    <Compile Include="Data\Artist.cs" />
-    <Compile Include="Data\Credit.cs" />
-    <Compile Include="Data\EventType.cs" />
-    <Compile Include="Data\Genre.cs" />
-    <Compile Include="Data\IEntity.cs" />
-    <Compile Include="Data\Key.cs" />
-    <Compile Include="Data\IRelationInfo.cs" />
-    <Compile Include="Data\KeyComparer.cs" />
-    <Compile Include="Data\Piece.cs" />
-    <Compile Include="Data\QueryHelper.cs" />
-    <Compile Include="Data\RelationInfo.cs" />
-    <Compile Include="Data\Role.cs" />
-    <Compile Include="Data\Schema.cs" />
-    <Compile Include="Data\Set.cs" />
-    <Compile Include="Data\SortedChildList.cs" />
-    <Compile Include="Data\EntityBase.cs" />
-    <Compile Include="Data\Event.cs" />
-    <Compile Include="Data\Newsletter.cs" />
-    <Compile Include="Data\Series.cs" />
-    <Compile Include="Data\Location.cs" />
+    <Compile Include="Act.cs" />
+    <Compile Include="Artist.cs" />
+    <Compile Include="Credit.cs" />
+    <Compile Include="EntityBase.cs" />
+    <Compile Include="Event.cs" />
+    <Compile Include="EventType.cs" />
+    <Compile Include="Genre.cs" />
+    <Compile Include="IEntity.cs" />
+    <Compile Include="IRelationInfo.cs" />
+    <Compile Include="Key.cs" />
+    <Compile Include="KeyComparer.cs" />
+    <Compile Include="Location.cs" />
+    <Compile Include="Newsletter.cs" />
+    <Compile Include="Piece.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="QueryHelper.cs" />
+    <Compile Include="RelationInfo.cs" />
+    <Compile Include="Role.cs" />
+    <Compile Include="Schema.cs" />
+    <Compile Include="Series.cs" />
+    <Compile Include="Set.cs" />
+    <Compile Include="SortedChildList.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
     <None Include="Entity Relationship Diagram.cd" />
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
